# twilight-struggle-server

./: README.md  twilightstruggle.cabal
app/: Main.hs
backend/: stack.yaml  twilightstruggle-server.cabal  twilightstruggle.cabal
backend/src/: API.hs  Main.hs  Server.hs  ServerPlay.hs  Test5.hs
frontend/: stack.yaml  twilightstruggle-front.cabal  twilightstruggle.cabal
frontend/src/: Countries.hs  FrontendPlay.hs  Main.hs
lib/: twilightstruggle-lib.cabal
lib/src/: Cards.hs  Countries.hs  Play.hs  Rules.hs  Score.hs  Types.hs
lib/test/: Spec.hs
src/: Play.hs  Rules.hs
test/: Spec.hs
