name:                twilightstruggle-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            http://github.com/name/project
license:             BSD3
license-file:        ../lib/LICENSE
author:              David McHealy
maintainer:          dmchealy@west.com
-- copyright:           
category:            Games
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable twilightstruggle-server
  hs-source-dirs:      src/
  other-modules:       Server, ServerPlay
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
                     , attoparsec
                     , either
                     , mtl
                     , jose-jwt
                     , stm
                     , async
                     , websockets
                     , servant
                     , servant-server
                     , servant-lucid
                     , twilightstruggle-lib

  default-language:    Haskell2010
