name:                twilightstruggle-front
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            http://github.com/name/project
license:             BSD3
license-file:        ../lib/LICENSE
author:              David McHealy
maintainer:          dmchealy@west.com
-- copyright:           
category:            Games
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable twilightstruggle-front
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Countries
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , mtl
                     , containers
                     , reflex
                     , reflex-dom
                     , reflex-dom-contrib
                     , twilightstruggle-lib
  default-language:    Haskell2010
