name:                twilightstruggle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            http://github.com/name/project
license:             BSD3
license-file:        ../LICENSE
author:              David McHealy
maintainer:          dmchealy@west.com
-- copyright:           
category:            Games
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      ../src
  exposed-modules:     Rules, Play
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable twilightstruggle
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , twilightstruggle
  default-language:    Haskell2010

test-suite twilightstruggle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      ../test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , containers
                     , twilightstruggle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
