name:                twilightstruggle-lib
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              David McHealy
maintainer:          dmchealy@west.com
-- copyright:           
category:            Games
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rules, Play, Cards, Countries, Types, Score
  build-depends:       base
                     , containers
                     , megaparsec
                     , lens
  default-language:    Haskell2010

test-suite twilightstruggle-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , containers
                     , twilightstruggle-lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
